[metadata]
name = apimon_executor
summary = APIMon scheduler and executor
description-file =
    README.rst
author = OTC Team
python-requires = >=3.5
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[pbr]
warnerrors = True

[global]

[entry_points]
console_scripts =
    apimon-scheduler = apimon_executor.cmd.scheduler:main

[extras]
