[metadata]
name = apimon
summary = APIMon scheduler and executor
description-file =
    README.rst
author = OTC Team
python-requires = >=3.5
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[pbr]
warnerrors = True

[global]

[entry_points]
console_scripts =
    scheduler = apimon.cmd.scheduler:main
    executor = apimon.cmd.executor:main
    epmon = apimon.cmd.apmon:main

[extras]
